tdksoftonline/k8s/base/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdk-backend
  namespace: academy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdk-site
  template:
    metadata:
      labels:
        app: tdk-site
    spec:
      containers:
      - name: backend
        image: tdksoft341/tdkacademy-backend:latest
        ports:
        - containerPort: 8000
        nv:
        - name: PYTHONUNBUFFERED
          value: "1"
