tdksoftonline/k8s/base/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdk-ingress
  namespace: academy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - academy.tdksoftconsulting.de
    secretName: tdkacademy-tls-cert # Name of the secret that will contain the certificate
  rules:
  - host: academy.tdksoftconsulting.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tdk-service
            port:
              number: 80
